--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ _json/
 _html/
 .vscode/
 shops_debug.json
-future.txt
+PythonScraper/TODO.txt
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
