--- a/WCF_and_API/PcPartsScrap/PcPartsScrap.Wcf.Services/PcPartsScrap.Wcf.Services.csproj
+++ b/WCF_and_API/PcPartsScrap/PcPartsScrap.Wcf.Services/PcPartsScrap.Wcf.Services.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PcPartsManager.cs" />
+    <Compile Include="PcPartsService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
