add database connection

--- a/WCF_and_API/PcPartsScrap/PcPartsScrap.Wcf.ConsoleHost/App.config
+++ b/WCF_and_API/PcPartsScrap/PcPartsScrap.Wcf.ConsoleHost/App.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <connectionStrings>
+    <add name="PCPartsDB" connectionString="Server=DESKTOP-CVC40GK;Database=PCPartsScrap;Trusted_Connection=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
   <system.serviceModel>
     <services>
       <service name="PcPartsScrap.Wcf.Services.PcPartsService"
